2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/Airport_Supervision__c.object-meta.xml
<CustomObject>
    <label>Airport Supervision</label>
    <nameField>
        <displayFormat>APS-{00000}</displayFormat>
        <label>APS Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airport Supervision</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>