2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Airborne_24hrs__c.field-meta.xml
<CustomField>
    <fullName>Airborne_24hrs__c</fullName>
    <label>Airborne (24hrs)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>