2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <length>30</length>
    <type>Text</type>
</CustomField>