2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Arrived_at_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Arrived_at_Aircraft__c</fullName>
    <label>Arrived at Aircraft</label>
    <type>Date</type>
</CustomField>