2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Departed_Facility__c.field-meta.xml
<CustomField>
    <fullName>Departed_Facility__c</fullName>
    <label>Departed Facility</label>
    <type>Date</type>
</CustomField>