2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <formula>Job_Reference__r.Flight_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight #</label>
    <type>Text</type>
</CustomField>