2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Loaded_onto_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Loaded_onto_Aircraft__c</fullName>
    <label>Loaded onto Aircraft</label>
    <type>DateTime</type>
</CustomField>