2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/MAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWB__c</fullName>
    <formula>Job_Reference__r.MAWB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAWB #</label>
    <type>Text</type>
</CustomField>