2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/No_of_Pieces__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pieces__c</fullName>
    <formula>Job_Reference__r.No_of_Packages_Crates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Pieces</label>
    <type>Text</type>
</CustomField>