2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Pallet_Can__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Can__c</fullName>
    <label>Pallet/Can #</label>
    <type>TextArea</type>
</CustomField>