2nd training/Community/Community/Community1/force-app/main/default/objects/Airport_Supervision__c/fields/Position_on_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Position_on_Aircraft__c</fullName>
    <label>Position on Aircraft</label>
    <length>20</length>
    <type>Text</type>
</CustomField>